@@ -94,12 +94,6 @@ class CodeTest(DuplicityTestCase):
                    "E201",
                    "E202",
                    "E203",
-                   "E211",
-                   "E221",
-                   "E222",
-                   "E225",
-                   "E226",
-                   "E228",
                    "E231",
                    "E241",
                    "E251",
